--- a/vignettes/Exporting-and-Reproducibility.Rmd
+++ b/vignettes/Exporting-and-Reproducibility.Rmd
@@ -18,7 +18,7 @@ The copy/download feature only applies to the rows currently visible on the page
 `dataviewR` uses the `callr` package to run the shiny application in a background process. To manage and retrieve information about active `dataviewR` sessions, the following helper functions are available.
 
 - `list_dataviewers` → Lists all active `dataviewR` sessions.
-- `stop_dataviewer` → To stop a specifc or single `dataviewR` session.
+- `stop_dataviewer` → To stop a specific or recent `dataviewR` session.
 - `stop_all_dataviewers`→ To stop all active `dataviewR` sessions.
 
 ## 2. To know the session information
@@ -50,7 +50,7 @@ stop_dataviewer()
 ```
 
 
-To stop a single or specific dataviewR session, user can use `stop_dataviewer` by providing the id of the session. 
+To stop a specific or recent dataviewR session, user can use `stop_dataviewer` by providing the id of the session. 
 
 ```r
 id <- dataviewer(mtcars, iris)
