--- a/vignettes/Filtering-Expressions.Rmd
+++ b/vignettes/Filtering-Expressions.Rmd
@@ -20,10 +20,11 @@ This gives you complete flexibility while keeping the logic clean and reproducib
 
 ```r
 library(dataviewR)
+
 dataviewer(iris)
 ```
 
-Once the app opens, you’ll see a Filter text box where you can type any expression similar to `dplyr::filter()`.
+Once the app opens, you’ll see a Filter text box where you can type any valid expression similar to `dplyr::filter()`.
 
 ## 2. Filtering with Expressions
 
@@ -62,13 +63,11 @@ When you click Submit, the expression is evaluated and the dataset updates.
 
 Invalid expressions show a friendly error notification. 
 
-Unlike `View()`, `dataviewR` does not dynamically reflect when the dataset is altered in RStudio after being loaded.
-
 ## 3. Re-running, clearing, or updating filters
 
 - Submit → runs the filter
 - Clear → resets the filter box
-- Load → Reloads the data with all selections reset
+- Load → reloads the data with all selections reset
 
 The display updates immediately after submitting.
 
@@ -89,28 +88,18 @@ Filtering always appears before column selection in the generated R code.
 - Use & instead of &&
 - Use %in% for selecting multiple values
 - Variable names are case-sensitive
-- Treat the filter box like the inside of `dplyr::filter()` function
+- Treat the filter box like the `dplyr::filter()` function
 - If something fails, try running your expression directly in the R console first
 
 ## 6. Note on Quick Filter and Quick Search
-
-The table includes built-in per-column filters from DataTables (filter = "top").
-These:
-- do not affect exported code <br>
-- do not combine with expression filters <br>
-- are optional UI helpers for on-screen browsing only <br>
-- At present, NA values in numeric variables appear as blanks in DT tables, but this shall be fixed in a future enhancement<br>
 
 The quick filter box (placed below the variable name) will helps to quickly search for a value in the variable. For character/factor variable(s) - it shows the distinct values of the variable(s) including the **NA** values. For numeric variable(s) - it shows an interactive draggable slider with minimum and maximum values of the variable(s). These do not reflect in the generated R code as filtering logic is solely depends on the Filter expression box. At present, NA values in numeric variables appear as blanks as per DT package formatting but this shall be fixed in a future enhancement.
 
 The quick search box allows you to quickly check whether a value exists in the dataset. It searches only within variable values, not variable names/attributes.
 
-
-Filtering logic in dataviewR is defined solely by the expression box.
-
 ## Summary
 
-In this article, you learned:
+In this article, you learned: <br>
 - `dataviewR` uses expression-based filtering system <br>
 - Expressions must be valid similar to `dplyr::filter()` function <br>
 - The filtered result updates on Submit <br>
