--- a/vignettes/Introduction-to-dataviewR.Rmd
+++ b/vignettes/Introduction-to-dataviewR.Rmd
@@ -6,7 +6,6 @@ vignette: >
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
-<p align="right"> <img src="../man/figures/dataviewR_logo.png" width="180" alt="dataviewR logo"> </p>
 
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
@@ -29,7 +28,9 @@ Whether you work in clinical research, data analysis, or academia, a strong unde
 
 While functions like `View()` offer a quick static snapshot of a dataset, they are limited when working with large datasets, inspecting variable values, or applying interactive filters.
 
-`dataviewR` offers a flexible, dynamic interface that enables efficient and intuitive data exploration, whether within the viewer pane or through a standalone R Shiny application. `dataviewR` does not modify any values/attributes of the dataset(s) passed
+`dataviewR` offers a flexible, dynamic interface that enables efficient and intuitive data exploration, whether within the viewer pane or through a standalone R Shiny application.
+
+`dataviewR` **does not modify any values/attributes** of the dataset(s) passed
  
 This guide walks you through how to launch, navigate, and work with datasets in dataviewR.
 
@@ -43,14 +44,13 @@ There are three ways to start the application, depending on your workflow:
 
 When you pass a dataset(s), dataviewR opens directly with that dataset(s) loaded.
 
-To open the dataviewR shiny application user is requested to disable background option.
-
 For better user experience, it is recommended to open dataviewR in new window from Viewer pane.
 
 To open the dataset in a shiny application, user is requested to disable the background option using background = FALSE argument but it keeps the console busy.
 
 ```r
 library(dataviewR)
+
 dataviewer(iris) # Opens in RStudio Viewer pane or default web browser
 
 dataviewer(iris, background = FALSE) # Opens the Shiny application and run in foreground to enable the "Import Dataset" tab alongside 'iris'
@@ -103,7 +103,7 @@ When a dataset is loaded, you can:
 
 ✔ Apply flexible row filters (with `dplyr` style expressions) <br>
 ✔ Select or deselect variables and sort columns <br>
-✔ See distinct values for character/factor columns *(including NA)* in the quick filter box.<br>
+✔ See distinct values for character/factor columns **(including NA)** in the quick filter box.<br>
 ✔ View metadata such as variable classes and attributes <br>
 ✔ Export filtered data <br>
 ✔ Copy auto-generated dplyr code for reproducibility <br>
