Made a small correction

--- a/vignettes/Filtering-Expressions.Rmd
+++ b/vignettes/Filtering-Expressions.Rmd
@@ -49,7 +49,7 @@ Using %in%
 Species %in% c("setosa", "virginica")
 ```
 
-Handling missing values
+Finding missing values
 ```csharp
 is.na(Petal.Width)
 ```
